Align Labs 1-7 as post-exercise consolidation with hard gates